organized thoughts, thing.emit('some'), rock - todo grab/throwh

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /concepts/*.psb
 /*.sublime-project
 /*.sublime-workspace
+/js\libs/box2d-header.js
+/js\libs/box2d-header.js
+/js\libs/box2d-header.js
